// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmazonAds.syncAudiencesToDSP Normalise and Hash input with extra characters and spaces 1`] = `
Object {
  "afterResponse": Array [
    [Function],
    [Function],
    [Function],
  ],
  "beforeRequest": Array [
    [Function],
  ],
  "body": "{\\"records\\":[{\\"externalUserId\\":\\"test-kochar-01\\",\\"countryCode\\":\\"US\\",\\"action\\":\\"CREATE\\",\\"hashedPII\\":[{\\"address\\":\\"b1afff5d12bbf57a065ada36e32fef747b5b780efc77e250c3656f9375340793\\",\\"postal\\":\\"516b1543763b8b04f15897aeac07eba66f4e36fdac6945bacb6bdac57e44598a\\",\\"phone\\":\\"e5a9c2de38b55b6bedcbb8a24d302bb67b2bff018ddd4ce2f7e53b809461145e\\",\\"city\\":\\"6f03728dda12764dfb0aef47a8ad1289aa90edc9689ef9e9aee7cd2e8d2ef19f\\",\\"state\\":\\"7e8eea5cc60980270c9ceb75ce8c087d48d726110fd3d17921f774eefd8e18d8\\",\\"email\\":\\"e51e21fe4c09dbd046b84be7e9e894f666d6106b0915403a47bfbc3506e2e1bf\\"}]}],\\"audienceId\\":379909525712777677}",
  "headers": Headers {
    Symbol(map): Object {
      "amazon-advertising-api-clientid": Array [
        "",
      ],
      "authorization": Array [
        "Bearer undefined",
      ],
      "content-type": Array [
        "application/vnd.amcaudiences.v1+json",
      ],
      "user-agent": Array [
        "Segment (Actions)",
      ],
    },
  },
  "method": "POST",
  "signal": AbortSignal {
    Symbol(kEvents): Map {},
    Symbol(events.maxEventTargetListeners): 10,
    Symbol(events.maxEventTargetListenersWarned): false,
    Symbol(kAborted): false,
    Symbol(kReason): undefined,
  },
  "statsContext": Object {},
  "throwHttpErrors": true,
  "timeout": 10000,
}
`;

exports[`AmazonAds.syncAudiencesToDSP Normalise and Hash personally-identifiable input provided with SHA-256 1`] = `
Object {
  "afterResponse": Array [
    [Function],
    [Function],
    [Function],
  ],
  "beforeRequest": Array [
    [Function],
  ],
  "body": "{\\"records\\":[{\\"externalUserId\\":\\"test-kochar-01\\",\\"countryCode\\":\\"US\\",\\"action\\":\\"CREATE\\",\\"hashedPII\\":[{\\"firstname\\":\\"44104fcaef8476724152090d6d7bd9afa8ca5b385f6a99d3c6cf36b943b9872d\\",\\"phone\\":\\"63af7d494c194a90e1cf1db5371c13f97db650161aa803e67182c0dbaf668c7b\\",\\"state\\":\\"92db9c574d420b2437b29d898d55604f61df6c17f5163e53337f2169dd70d38d\\",\\"email\\":\\"15b436489faf367dadf946cfe311d44b6621814e1aacc4f8acfdf0c29a068b11\\"}]}],\\"audienceId\\":379909525712777677}",
  "headers": Headers {
    Symbol(map): Object {
      "amazon-advertising-api-clientid": Array [
        "",
      ],
      "authorization": Array [
        "Bearer undefined",
      ],
      "content-type": Array [
        "application/vnd.amcaudiences.v1+json",
      ],
      "user-agent": Array [
        "Segment (Actions)",
      ],
    },
  },
  "method": "POST",
  "signal": AbortSignal {
    Symbol(kEvents): Map {},
    Symbol(events.maxEventTargetListeners): 10,
    Symbol(events.maxEventTargetListenersWarned): false,
    Symbol(kAborted): false,
    Symbol(kReason): undefined,
  },
  "statsContext": Object {},
  "throwHttpErrors": true,
  "timeout": 10000,
}
`;

exports[`AmazonAds.syncAudiencesToDSP Should add user to audience when Event is Audience Entered 1`] = `
Object {
  "afterResponse": Array [
    [Function],
    [Function],
    [Function],
  ],
  "beforeRequest": Array [
    [Function],
  ],
  "body": "{\\"records\\":[{\\"externalUserId\\":\\"test-kochar-01\\",\\"countryCode\\":\\"US\\",\\"action\\":\\"CREATE\\",\\"hashedPII\\":[{}]}],\\"audienceId\\":379909525712777677}",
  "headers": Headers {
    Symbol(map): Object {
      "amazon-advertising-api-clientid": Array [
        "",
      ],
      "authorization": Array [
        "Bearer undefined",
      ],
      "content-type": Array [
        "application/vnd.amcaudiences.v1+json",
      ],
      "user-agent": Array [
        "Segment (Actions)",
      ],
    },
  },
  "method": "POST",
  "signal": AbortSignal {
    Symbol(kEvents): Map {},
    Symbol(events.maxEventTargetListeners): 10,
    Symbol(events.maxEventTargetListenersWarned): false,
    Symbol(kAborted): false,
    Symbol(kReason): undefined,
  },
  "statsContext": Object {},
  "throwHttpErrors": true,
  "timeout": 10000,
}
`;

exports[`AmazonAds.syncAudiencesToDSP Should delete user from audience when Event is Audience Exited 1`] = `
Object {
  "afterResponse": Array [
    [Function],
    [Function],
    [Function],
  ],
  "beforeRequest": Array [
    [Function],
  ],
  "body": "{\\"records\\":[{\\"externalUserId\\":\\"test-kochar-01\\",\\"countryCode\\":\\"US\\",\\"action\\":\\"DELETE\\",\\"hashedPII\\":[{}]}],\\"audienceId\\":379909525712777677}",
  "headers": Headers {
    Symbol(map): Object {
      "amazon-advertising-api-clientid": Array [
        "",
      ],
      "authorization": Array [
        "Bearer undefined",
      ],
      "content-type": Array [
        "application/vnd.amcaudiences.v1+json",
      ],
      "user-agent": Array [
        "Segment (Actions)",
      ],
    },
  },
  "method": "POST",
  "signal": AbortSignal {
    Symbol(kEvents): Map {},
    Symbol(events.maxEventTargetListeners): 10,
    Symbol(events.maxEventTargetListenersWarned): false,
    Symbol(kAborted): false,
    Symbol(kReason): undefined,
  },
  "statsContext": Object {},
  "throwHttpErrors": true,
  "timeout": 10000,
}
`;
